Set fixed size for leftmost icon in outcome component to fix alignment issue

--- a/src/app/cube/details/components/outcome/outcome.component.scss
+++ b/src/app/cube/details/components/outcome/outcome.component.scss
@@ -9,7 +9,7 @@
 
 .outcome__grid-container {
     display: grid;
-    grid-template-columns: auto 70% 100px auto;
+    grid-template-columns: 50px 70% 100px auto;
 }
 
 .text-container__mapped-to {
